(#14): create header component in use for the chat page. Contains the username, a settings menu (to be done) and the logout button (now as a simple icon). Fix Login/Register button background not correctly showing in small screen sizes. Style general browser scrollbar. Adjust some font sizes.

--- a/frontend/src/app/chat/chat.component.scss
+++ b/frontend/src/app/chat/chat.component.scss
@@ -1,25 +1,3 @@
-.chat-scrollbar {
-
-    &::-webkit-scrollbar {
-        width: 0.35rem;
-    }
-
-    &::-webkit-scrollbar-track {
-        background: rgb(26, 32, 44);
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background: rgb(112, 125, 151);
-        border-radius: 0.5rem;
-    }
-
-    /* special firefox scrollbar styles */
-    scrollbar-width: thin;
-    scrollbar-color: rgb(112, 125, 151);
-    scrollbar-track-color: rgb(26, 32, 44);
-
-}
-
 .form-element {
     background-color: rgb(26, 32, 44);
 }
